--- a/desktop.css
+++ b/desktop.css
@@ -337,5 +337,11 @@ font-family:'Courier New',Arial;
 font-weight: lighter;
 text-align: left;
 }
+
+
+iframe {
+width: 100%;
+height: 100%;
+}
 </style>
 </head>
