--- a/mobil.css
+++ b/mobil.css
@@ -248,11 +248,17 @@ margin-top:19em;
 }
 
 .sweetdemon {
-margin-top:19em;
+margin-top:0em;
+display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .ghibli {
 margin-top:25em;
+display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 img.releases {
@@ -291,7 +297,7 @@ font-size:16px;
 color:#00ff00; 
 font-family:'Courier New',Arial; 
 font-weight: lighter;
-text-align: right;
+text-align: center;
 }
 
 h4 {
@@ -299,7 +305,7 @@ font-size:12px;
 color:#00ff00; 
 font-family:'Courier New',Arial; 
 font-weight: lighter;
-text-align: right;
+text-align: center;
 }
 
 h5 {
@@ -307,7 +313,7 @@ font-size:16px;
 color:#00ff00; 
 font-family:'Courier New',Arial; 
 font-weight: lighter;
-text-align: left;
+text-align: center;
 }
 
 h6 {
@@ -315,7 +321,7 @@ font-size:12px;
 color:#00ff00; 
 font-family:'Courier New',Arial; 
 font-weight: lighter;
-text-align: left;
+text-align: center;
 }
 
 
