--- a/mobil.css
+++ b/mobil.css
@@ -11,6 +11,10 @@ body, html {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 .hero-image {
   background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)), url("profil.jpg");
   height: 100%;
@@ -278,11 +282,11 @@ margin-top:15em !important;
 }
 
 div.ghibli {
-margin-top:5em !important;
+margin-top:20em !important;
 }
 
 img.sweetdemon {
-margin-top:0em;
+margin-top:10em;
 display: block;
     margin-left: auto;
     margin-right: auto
@@ -308,6 +312,7 @@ img.releases {
    padding: 0px;
    width: 100%;
    margin-top:0em;
+   display: none;
 }
 
 .contact {
@@ -365,7 +370,7 @@ text-align: center;
 iframe {
 width: 100%;
 height: 100%;
-margin-top: 15em !important;
+margin-top: 10em !important;
 }
 </style>
 </head>
