--- a/desktop.css
+++ b/desktop.css
@@ -253,15 +253,10 @@ img.releases {
    width: 100%;
    margin-top:16em;
    transition: 0.5s;
-box-shadow: 0 0 0px 1.5px #00ff00;
-	-moz-box-shadow: 0 0 0px 1.5px #00ff00;
-	-webkit-box-shadow: 0 0 0px 1.5px #00ff00;
 }
 
 img.releases:hover{
-box-shadow: 0 0 0px 3px #00ff00;
-	-moz-box-shadow: 0 0 0px 3px #00ff00;
-	-webkit-box-shadow: 0 0 0px 3px #00ff00;
+-webkit-filter: hue-rotate(90deg) !important;
 }
 
 
