--- a/desktop.css
+++ b/desktop.css
@@ -265,12 +265,12 @@ img.releases:hover{
    padding: 0em;
    width: 100%;
    margin-top:0em !important;
-      transition: 0.2s;
+      transition: 0.6s;
    
 }
 
 .angel:hover{
--webkit-filter: hue-rotate(90deg) !important;
+-webkit-filter: saturate(1.4) !important;
 }
 
 
