--- a/desktop.css
+++ b/desktop.css
@@ -15,6 +15,35 @@ html {
   scroll-behavior: smooth;
 }
 
+.loader {
+position: fixed;
+z-index: 99;
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+display: flex;
+justify-content: center;
+align-items: center;
+background-color: rgba(0,0,0, 0.7);
+}
+
+.loader > img {
+width: 7em;
+}
+
+.loader.hidden {
+animation: fadeOut 0.1s;
+animation-fill-mode: forwards;
+}
+
+@keyframes fadeOut {
+100% {
+opacity 0;
+visibility: hidden;
+}
+}
+
 .hero-image {
   background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)), url("profil.jpg");
   height: 100%;
