--- a/experiment desktop.css
+++ b/experiment desktop.css
@@ -11,6 +11,39 @@ body, html {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
+.loader {
+position: fixed;
+z-index: 99;
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+display: flex;
+justify-content: center;
+align-items: center;
+background-color: rgba(0,0,0, 0.7);
+}
+
+.loader > img {
+width: 7em;
+}
+
+.loader.hidden {
+animation: fadeOut 0.1s;
+animation-fill-mode: forwards;
+}
+
+@keyframes fadeOut {
+100% {
+opacity 0;
+visibility: hidden;
+}
+}
+
 .hero-image {
   background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)), url("profil.jpg");
   height: 100%;
@@ -248,26 +281,25 @@ img.releases {
    padding: 0em;
    width: 100%;
    margin-top:16em;
-   transition: 1s;
-
+   transition: 0.5s;
 }
 
 img.releases:hover{
--webkit-filter: hue-rotate(-150deg) !important;
-opacity: 0.9;
+-webkit-filter: hue-rotate(125deg) !important;
 }
 
 
-.logo {
+.angel {
    overflow: hidden;
    padding: 0em;
    width: 100%;
    margin-top:0em !important;
-    transition: 1s;
+      transition: 0.6s;
+   
 }
 
-.logo:hover{
--webkit-filter: hue-rotate(-98deg) !important;
+.angel:hover{
+-webkit-filter: saturate(1.4) !important;
 }
 
 
