--- a/desktop.css
+++ b/desktop.css
@@ -447,5 +447,19 @@ font-weight: lighter;
   width: 100%;
   height: 100%;
 }
+
+.iframe-container2{
+  position: relative;
+  width: 100%;
+  padding-bottom: 50%; 
+  height: 0;
+}
+.iframe-container2 iframe{
+  position: absolute;
+  top:0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
 </style>
 </head>
