--- a/mobil.css
+++ b/mobil.css
@@ -416,5 +416,19 @@ line-height: 1.5;
   width: 100%;
   height: 100%;
 }
+
+.iframe-container2{
+  position: relative;
+  width: 100%;
+  padding-bottom: 50%; 
+  height: 0;
+}
+.iframe-container2 iframe{
+  position: absolute;
+  top:0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
 </style>
 </head>
