--- a/mobil.css
+++ b/mobil.css
@@ -313,7 +313,7 @@ margin-top:3em !important;
 }
 
 div.ghibli {
-margin-top:11em !important;
+margin-top: 4em !important;
 }
 
 img.sweetdemon {
@@ -349,7 +349,7 @@ img.releases {
 }
 
 .contact {
-margin-top: 3em;
+margin-top: 4em;
 }
 
 .centered3 {
@@ -361,7 +361,7 @@ margin-top:16em;
 }
 
 .thanksyou {
-margin-top:10em;
+margin-top:8em;
 }
 
 
@@ -372,6 +372,7 @@ font-family:'Courier New',Arial;
 font-weight: lighter;
 text-align: center;
 margin-top: 3em;
+margin-bottom: 2em;
 }
 
 h4 {
@@ -381,6 +382,7 @@ font-family:'Courier New',Arial;
 font-weight: lighter;
 text-align: center;
 line-height: 1.5;
+margin-top: 0em;
 }
 
 h5 {
@@ -390,6 +392,7 @@ font-family:'Courier New',Arial;
 font-weight: lighter;
 text-align: center;
 margin-top: 3em;
+margin-bottom: 2em;
 }
 
 h6 {
@@ -399,6 +402,7 @@ font-family:'Courier New',Arial;
 font-weight: lighter;
 text-align: center;
 line-height: 1.5;
+margin-top: 0em;
 }
 
 
@@ -407,7 +411,7 @@ line-height: 1.5;
   width: 100%;
   padding-bottom: 50%; 
   height: 0;
-  margin-top: 10em;
+  margin-top: 4em;
 }
 .iframe-container iframe{
   position: absolute;
