--- a/mobil.css
+++ b/mobil.css
@@ -11,6 +11,8 @@ body, html {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+a,a:link,a:visited{outline:none;}
+
 html {
   scroll-behavior: smooth;
 }
@@ -434,5 +436,6 @@ margin-top: 0em;
   width: 100%;
   height: 100%;
 }
+
 </style>
 </head>
