--- a/desktop.css
+++ b/desktop.css
@@ -11,11 +11,11 @@ body, html {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-a,a:link,a:visited{outline:none;}
-
 html {
   scroll-behavior: smooth;
 }
+
+a,a:link,a:visited{outline:none;}
 
 .loader {
 position: fixed;
@@ -274,6 +274,22 @@ a.six:hover {
   text-shadow: 2px 2px 5px #ec2ec4;
 }
 
+a.seven {
+color:#00FF00;
+text-decoration:none;
+font-family: 'Courier New',Arial;
+font-size: 16px;
+font-weight: lighter;
+}
+
+a.seven:hover {
+  color: #d8ffd8;
+  text-decoration:none;
+  font-family: 'Courier New',Arial;
+  font-size: 16px;
+  font-weight: lighter;
+  text-shadow: 2px 2px 5px #ec2ec4;
+}
 
 
 
@@ -317,9 +333,6 @@ div.music {
 margin-top:16em;
 }
 
-.thanksyou {
-margin-top:10em;
-}
 
 div.about {
 margin-top:19em;
@@ -404,7 +417,6 @@ font-family:'Courier New',Arial;
 font-weight: lighter;
 text-align: right;
  text-shadow: 2px 2px 5px #1ff2de;
- margin-bottom: 1.5em;
 }
 
 h4 {
@@ -424,7 +436,6 @@ font-family:'Courier New',Arial;
 font-weight: lighter;
  text-shadow: 2px 2px 5px #ec2ec4;
  text-align: left;
- margin-bottom: 1em;
 }
 
 h6 {
@@ -452,18 +463,43 @@ font-weight: lighter;
   height: 100%;
 }
 
-.iframe-container2{
-  position: relative;
-  width: 100%;
-  padding-bottom: 50%; 
-  height: 0;
+
+div.pressphotos {
+margin-top:15em;
+margin-left:30px;
+margin-bottom:1em;
 }
-.iframe-container2 iframe{
-  position: absolute;
-  top:0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+
+div.pressphotos1 {
+font-size:16px; 
+color:#00FF00; 
+font-family:'Courier New',Arial; 
+font-weight: lighter;
+ margin-right: 300px;
+ display:inline;
 }
+
+div.pressphotos2 {
+font-size:12px; 
+color:#00ff00; 
+font-family:'Courier New',Arial; 
+font-weight: lighter;
+display:inline;
+}
+
+
+img.radioeins {
+float: left !important;
+margin-right:30px !important;
+margin-bottom:30px !important;
+margin-left:30px !important;
+width:500px;
+height:267px;
+}
+
+.thanksyou {
+margin-top:28em;
+}
+
 </style>
 </head>
