--- a/experiment desktop.css
+++ b/experiment desktop.css
@@ -272,6 +272,22 @@ a.six:hover {
   text-shadow: 2px 2px 5px #ec2ec4;
 }
 
+a.seven {
+color:#00FF00;
+text-decoration:none;
+font-family: 'Courier New',Arial;
+font-size: 16px;
+font-weight: lighter;
+}
+
+a.seven:hover {
+  color: #d8ffd8;
+  text-decoration:none;
+  font-family: 'Courier New',Arial;
+  font-size: 16px;
+  font-weight: lighter;
+  text-shadow: 2px 2px 5px #ec2ec4;
+}
 
 
 
@@ -315,9 +331,6 @@ div.music {
 margin-top:16em;
 }
 
-.thanksyou {
-margin-top:10em;
-}
 
 div.about {
 margin-top:19em;
@@ -447,5 +460,44 @@ font-weight: lighter;
   width: 100%;
   height: 100%;
 }
+
+
+div.pressphotos {
+margin-top:15em;
+margin-left:30px;
+margin-bottom:1em;
+}
+
+div.pressphotos1 {
+font-size:16px; 
+color:#00FF00; 
+font-family:'Courier New',Arial; 
+font-weight: lighter;
+ margin-right: 300px;
+ display:inline;
+}
+
+div.pressphotos2 {
+font-size:12px; 
+color:#00ff00; 
+font-family:'Courier New',Arial; 
+font-weight: lighter;
+display:inline;
+}
+
+
+img.radioeins {
+float: left !important;
+margin-right:30px !important;
+margin-bottom:30px !important;
+margin-left:30px !important;
+width:500px;
+height:267px;
+}
+
+.thanksyou {
+margin-top:28em;
+}
+
 </style>
 </head>
