--- a/desktop.css
+++ b/desktop.css
@@ -64,15 +64,16 @@ visibility: hidden;
 }
 
 a.four {
-color:#00FF00;
-text-decoration:none;
-font-family: 'Courier New',Arial;
-font-size: 14px;
-font-weight: lighter;
+  color: #b5ffb5;
+  text-decoration:none;
+  font-family: 'Courier New',Arial;
+  font-size: 14px;
+  font-weight: lighter;
+   text-shadow: 2px 2px 5px #ec2ec4;
 }
 
 a.four:hover {
-  color: #d8ffd8;
+  color: #e9ffe9;
   text-decoration:none;
   font-family: 'Courier New',Arial;
   font-size: 14px;
@@ -98,15 +99,16 @@ a.one:hover {
 }
 
 a.five {
-color:#00FF00;
-text-decoration:none;
-font-family: 'Courier New',Arial;
-font-size: 12px;
-font-weight: lighter;
+  color: #b5ffb5;
+  text-decoration:none;
+  font-family: 'Courier New',Arial;
+  font-size: 12px;
+  font-weight: lighter;
+   text-shadow: 2px 2px 5px #ec2ec4;
 }
 
 a.five:hover {
-  color: #d8ffd8;
+  color: #e9ffe9;
   text-decoration:none;
   font-family: 'Courier New',Arial;
   font-size: 12px;
@@ -241,15 +243,16 @@ z-index:1
   }  
   
   a.two {
-color:#000000;
-text-decoration:none;
-font-family: 'Courier New',Arial;
-font-size: 12px;
-font-weight: lighter;
+  color: #000000;
+  text-decoration:none;
+  font-family: 'Courier New',Arial;
+  font-size: 12px;
+  font-weight: lighter;
+  text-shadow: 2px 2px 5px #ffffff;
 }
 
 a.two:hover {
-  color: #d8ffd8;
+  color: #e9ffe9;
   text-decoration:none;
   font-family: 'Courier New',Arial;
   font-size: 12px;
@@ -257,16 +260,35 @@ a.two:hover {
   text-shadow: 2px 2px 5px #ec2ec4;
 }
 
+  a.eight {
+  color: #000000;
+  text-decoration:none;
+  font-family: 'Courier New',Arial;
+  font-size: 12px;
+  font-weight: lighter;
+  text-shadow: 2px 2px 5px #ffffff;
+}
+
+a.eight:hover {
+  color: #e9ffe9;
+  text-decoration:none;
+  font-family: 'Courier New',Arial;
+  font-size: 12px;
+  font-weight: lighter;
+  text-shadow: 2px 2px 5px #1ff2de;
+}
+
 a.six {
-color:#00FF00;
-text-decoration:none;
-font-family: 'Courier New',Arial;
-font-size: 12px;
-font-weight: lighter;
+  color: #b5ffb5;
+  text-decoration:none;
+  font-family: 'Courier New',Arial;
+  font-size: 12px;
+  font-weight: lighter;
+  text-shadow: 2px 2px 5px #ec2ec4;
 }
 
 a.six:hover {
-  color: #d8ffd8;
+  color: #e9ffe9;
   text-decoration:none;
   font-family: 'Courier New',Arial;
   font-size: 12px;
@@ -275,15 +297,16 @@ a.six:hover {
 }
 
 a.seven {
-color:#00FF00;
-text-decoration:none;
-font-family: 'Courier New',Arial;
-font-size: 16px;
-font-weight: lighter;
+  color: #b5ffb5;
+  text-decoration:none;
+  font-family: 'Courier New',Arial;
+  font-size: 16px;
+  font-weight: lighter;
+  text-shadow: 2px 2px 5px #ec2ec4;
 }
 
 a.seven:hover {
-  color: #d8ffd8;
+  color: #e9ffe9;
   text-decoration:none;
   font-family: 'Courier New',Arial;
   font-size: 16px;
