--- a/mobil.css
+++ b/mobil.css
@@ -243,22 +243,22 @@ z-index:1
   }  
   
   a.two {
-  color: #ae9ef5;
+  color: #c6d5f3;
   text-decoration:none;
   font-family: 'Courier New',Arial;
   font-size: 12px;
   font-weight: lighter;
-  text-shadow: 2px 2px 5px #ec2ec4;
+     text-shadow: 2px 2px 5px #4c60b6;
 }
 
 
 a.two:hover {
-  color: #a97cfb;
+  color: #f6f7f9;
   text-decoration:none;
   font-family: 'Courier New',Arial;
   font-size: 12px;
   font-weight: lighter;
-     text-shadow: 2px 2px 5px #ec2ec4;
+     text-shadow: 2px 2px 5px #4c60b6;
 }
 
   a.eight {
@@ -271,7 +271,7 @@ a.two:hover {
 }
 
 a.eight:hover {
-  color: #739cef;
+  color: #c6d5f3;
   text-decoration:none;
   font-family: 'Courier New',Arial;
   font-size: 12px;
@@ -518,12 +518,7 @@ margin-top:12em;
 }
 
 .parallax {
-  background: rgb(130,188,255);
-background: -moz-linear-gradient(90deg, rgba(130,188,255,0.6362744927072391) 0%, rgba(119,255,156,0.5709828393135725) 50%, rgba(133,69,252,0.7511204310825893) 100%);
-background: -webkit-linear-gradient(90deg, rgba(130,188,255,0.6362744927072391) 0%, rgba(119,255,156,0.5709828393135725) 50%, rgba(133,69,252,0.7511204310825893) 100%);
-background: linear-gradient(90deg, rgba(130,188,255,0.6362744927072391) 0%, rgba(119,255,156,0.5709828393135725) 50%, rgba(133,69,252,0.7511204310825893) 100%);
-filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#82bcff",endColorstr="#8545fc",GradientType=1);
-
+background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)), url("blue.jpg");
 height: 76em; 
 }
 
