--- a/experiment desktop.css
+++ b/experiment desktop.css
@@ -15,6 +15,8 @@ html {
   scroll-behavior: smooth;
 }
 
+a,a:link,a:visited{outline:none;}
+
 .loader {
 position: fixed;
 z-index: 99;
@@ -44,350 +46,233 @@ visibility: hidden;
 }
 }
 
-.hero-image {
-  background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)), url("profil.jpg");
-  height: 100%;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  position: relative;
+.header {
+    background: #000000;
+    width: 100%; 
+    height:30px;
+    position: fixed;
+    left: 0;
+    top: 0;
+    opacity: 0.95;
+     z-index:90;
+}
+
+.footer {
+    background: #000000;
+    width: 100%; 
+    height:30px;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    z-index:90;
+    opacity:0.95;
 }
 
 .hero-text {
   text-align: center;
-  position: absolute;
-  top: 90%;
+ position: fixed;
+   top: 96.5%;
   left: 0%;
   right: 0%;
+  z-index:99;
 }
 
-a.four {
-color:#00FF00;
-text-decoration:none;
-font-family: 'Courier New',Arial;
-font-size: 14px;
-font-weight: lighter;
+.hero-image {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 1)), url("profil.jpg");
+  height: 100%;
+   background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 44em; 
 }
 
-a.four:hover {
-  color: #d8ffd8;
-  text-decoration:none;
-  font-family: 'Courier New',Arial;
-  font-size: 14px;
-  font-weight: lighter;
-   text-shadow: 2px 2px 5px #ec2ec4;
-}
-
-a.one {
-color:#00FF00;
-text-decoration:none;
-font-family: 'Courier New',Arial;
-font-size: 16px;
-font-weight: lighter;
-}
-
-a.one:hover {
-  color: #8e9cff;
-  text-decoration:none;
-  font-family: 'Courier New',Arial;
-  font-size: 16px;
-  font-weight: lighter;
-   text-shadow: 2px 2px 5px red;
-}
-
-a.five {
-color:#00FF00;
-text-decoration:none;
-font-family: 'Courier New',Arial;
-font-size: 12px;
-font-weight: lighter;
-}
-
-a.five:hover {
-  color: #d8ffd8;
-  text-decoration:none;
-  font-family: 'Courier New',Arial;
-  font-size: 12px;
-  font-weight: lighter;
-   text-shadow: 2px 2px 5px #ec2ec4;
-}
 
 .centered {
-  position: absolute;
-  top: 10%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  position: fixed;
+  top: -2.5%;
+  left: 2%;
+  z-index: 99;
 }
 
-.top-right {
-  position: absolute;
-  top: 6%;
-  right: 1.25%;
-  }
-  
-    img.youtube {
-  top: 17px;
-  right: 15px;
-position: absolute;
-z-index: 2;
-  }
-   
-  img.youtube:hover{
-   opacity: 0;   
-}
-      
- img.youtube2 {
-  top: 17px;
-  right: 15px;
-position: absolute;
-z-index:1
-  }
-  
-  img.soundcloud {
-  top: 47px;
-  right: 15px;
-  opacity: 1;
-position: absolute; 
-z-index: 2;
-  }
-  
-  img.soundcloud:hover{
-   opacity: 0;   
-}
 
- img.soundcloud2 {
-  top: 47px;
-  right: 15px;
-position: absolute;
-z-index:1
-  }
-  
-  img.instagram {
-  top: 87px;
-  right: 15px;
-  opacity: 1;
-position:   absolute; 
-  z-index: 2;
-  }
-  
-  img.instagram:hover{
-   opacity: 0;   
-}
 
- img.instagram2 {
-  top: 87px;
-  right: 15px;
-position: absolute;
-z-index:1
-  }
-  
-  img.facebook {
-  top: 127px;
-  right: 15px;
-  opacity: 1;
-position:   absolute; 
-   z-index: 2;
-  }
-  
-  img.facebook:hover{
-   opacity: 0;   
-}
-
- img.facebook2 {
-  top: 127px;
-  right: 15px;
-position: absolute;
-z-index:1
-  }  
-  
-  img.twitter {
-  top: 167px;
-  right: 15px;
-  opacity: 1;
-position:   absolute; 
-z-index: 2;
-  }
-  
-  img.twitter:hover{
-   opacity: 0;   
-}
-
- img.twitter2 {
-  top: 167px;
-  right: 15px;
-position: absolute;
-z-index:1
-  }  
-  
-  img.twitch {
-  top: 207px;
-  right: 15px;
-  opacity: 1;
-position:  absolute; 
-  z-index: 2;
-  }
-  
-  img.twitch:hover{
-   opacity: 0;   
-}
-
- img.twitch2 {
-  top: 207px;
-  right: 15px;
-position: absolute;
-z-index:1
-  }  
-  
+    
+    .albumtitle {
+        top: 50%;
+    left: 50%;
+    position: absolute;
+    margin-top: -190px;
+    margin-left: -60px;
+    }
+    
+        h3 {
+        font-size: 3.2vw;
+        color:#ebe9ff; 
+     font-family:'New Times Roman';
+    }
+    
+    .button1 {
+        top: 50%;
+    left: 50%;
+    position: absolute;
+    margin-top: -40px;
+    margin-left: -60px;
+    }
+    
+    .button2 {
+        top: 50%;
+    left: 50%;
+    position: absolute;
+    margin-top: 10px;
+    margin-left: -60px;
+    }
+    
+ 
   a.two {
-color:#000000;
-text-decoration:none;
-font-family: 'Courier New',Arial;
-font-size: 12px;
-font-weight: lighter;
+  color: #b5ffb5;
+  text-decoration:none;
+  font-family:'Arial';
+  font-size: 1.5vw;
+  font-weight: 100;
 }
 
 a.two:hover {
-  color: #d8ffd8;
+  color: #ebe9ff;
   text-decoration:none;
-  font-family: 'Courier New',Arial;
-  font-size: 12px;
-  font-weight: lighter;
-  text-shadow: 2px 2px 5px #ec2ec4;
+ font-family: 'Arial';
+  font-size: 1.5vw;
+  font-weight: 100;
+}
+ img.ghibli {
+       width: 400px;
+    height: 400px;
+    top: 50%;
+    left: 50%;
+    position: absolute;
+    margin-top: -200px;
+    margin-left: -500px;
+  }
+  
+   img.ghibli:hover {
+       width: 400px;
+    height: 400px;
+    top: 50%;
+    left: 50%;
+    position: absolute;
+    margin-top: -200px;
+    margin-left: -500px;
+  }
+
+
+.youtube {
+width:22px;
+height:22px;
+top: 3px;
+right: 230px;
+position: fixed;
+display: inline-block;
+background: url("youtube.png") no-repeat;
+background-size: 22px;
+ z-index:99;
 }
 
-a.six {
-color:#00FF00;
-text-decoration:none;
-font-family: 'Courier New',Arial;
-font-size: 12px;
-font-weight: lighter;
+.youtube:hover {
+background: url("youtube2.png") no-repeat;
+background-size: 22px;
 }
 
-a.six:hover {
-  color: #d8ffd8;
-  text-decoration:none;
-  font-family: 'Courier New',Arial;
-  font-size: 12px;
-  font-weight: lighter;
-  text-shadow: 2px 2px 5px #ec2ec4;
+.soundcloud {
+width:22px;
+height:22px;
+ top: 3px;
+right: 190px;
+position: fixed;
+display: inline-block;
+background: url("soundcloud.png") no-repeat;
+background-size: 22px;
+ z-index:99;
 }
 
-a.seven {
-color:#00FF00;
-text-decoration:none;
-font-family: 'Courier New',Arial;
-font-size: 16px;
-font-weight: lighter;
+.soundcloud:hover {
+background: url("soundcloud2.png") no-repeat;
+background-size: 22px;
 }
 
-a.seven:hover {
-  color: #d8ffd8;
-  text-decoration:none;
-  font-family: 'Courier New',Arial;
-  font-size: 16px;
-  font-weight: lighter;
-  text-shadow: 2px 2px 5px #ec2ec4;
+.instagram {
+width:20px;
+height:20px;
+ top: 4px;
+right: 150px;
+position: fixed;
+display: inline-block;
+background: url("instagram.png") no-repeat;
+background-size: 20px;
+ z-index:99;
 }
 
-
-
-
-img.releases {
-   overflow: hidden;
-   padding: 0em;
-   width: 100%;
-   margin-top:16em;
-   transition: 0.5s;
+.instagram:hover {
+background: url("instagram2.png") no-repeat;
+background-size: 20px;
 }
 
-img.releases:hover{
--webkit-filter: hue-rotate(125deg) !important;
+.facebook {
+width:20px;
+height:20px;
+top: 4px;
+right: 110px;
+position: fixed;
+display: inline-block;
+background: url("facebook.png") no-repeat;
+background-size: 20px;
+ z-index:99;
 }
 
-
-.angel {
-   overflow: hidden;
-   padding: 0em;
-   width: 100%;
-   margin-top:0em !important;
-      transition: 0.6s;
-   
+.facebook:hover {
+background: url("facebook2.png") no-repeat;
+background-size: 20px;
 }
 
-.angel:hover{
--webkit-filter: saturate(1.4) !important;
+.twitter {
+width:20px;
+height:20px;
+top: 4px;
+right: 70px;
+position: fixed;
+display: inline-block;
+background: url("twitter.png") no-repeat;
+background-size: 20px;
+ z-index:99;
 }
 
-
-.contact {
-margin-top: 1em;
+.twitter:hover {
+background: url("twitter2.png") no-repeat;
+background-size: 20px;
 }
 
-.centered3 {
-margin-top:8em;
+.twitch {
+width:20px;
+height:20px;
+top: 4px;
+ right: 30px;
+position: fixed;
+display: inline-block;
+background: url("twitch.png") no-repeat;
+background-size: 20px;
+ z-index:99;
 }
 
-div.music {
-margin-top:16em;
+.twitch:hover {
+background: url("twitch2.png") no-repeat;
+background-size: 20px;
 }
-
-
-div.about {
-margin-top:19em;
-}
-
-img.about {
-float: right; 
-float: right !important;
-margin-left:30px !important;
-margin-bottom:30px !important;
-margin-right:30px !important;
-margin-top:0em !important;
-}
-
-p.about1 {
-font-size:16px; 
-color:#00ff00; 
-font-family:'Courier New',Arial; 
-font-weight: lighter;
- text-align: right;
-}
-
-p.about2 {
-font-size:12px; 
-color:#00ff00; 
-font-family:'Courier New',Arial; 
-font-weight: lighter;
-text-align: right;
-line-height: 1.5;
-}
-
-
-div.sweetdemon {
-margin-top:19em;
-}
-
-div.ghibli {
-margin-top:25em !important;
-}
-
-img.sweetdemon {
-border: 0.01em solid #3e0bb4;
-box-shadow: 0em 0em 0.5em 0.001em #7b0f1d;
-float: left !important;
-margin-right:30px !important;
-margin-bottom:30px !important;
-margin-left:30px !important;
-}
-
-img.ghibli {
-border: 0.01em solid #00c5ab;
-box-shadow: 0em 0em 0.5em 0.001em #b71c1c;
-float: right !important;
-margin-left:30px !important;
-margin-bottom:30px !important;
-margin-right:30px !important;
-margin-top:0em !important;
+ 
+  
+  .streaming {
+ top: 7px;
+  right: 270px;
+position: fixed;
+z-index: 99;
 }
 
 
@@ -397,56 +282,15 @@ body, html {
 }
 
 .parallax {
-  background-image: url('blue.jpg');
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 1)), url("profil.jpg");
 margin-top:0em;
 margin-bottom: 0em !important;
-  height: 90em; 
+  height: 140em; 
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
 }
-
-
-h3 {
-font-size:16px; 
-color:#000000; 
-font-family:'Courier New',Arial; 
-font-weight: lighter;
-text-align: right;
- text-shadow: 2px 2px 5px #1ff2de;
-}
-
-h4 {
-font-size:12px; 
-color:#000000; 
-font-family:'Courier New',Arial; 
-font-weight: lighter;
-text-align: right;
- text-shadow: 2px 2px 5px #1ff2de;
- line-height: 1.5;
-}
-
-h5 {
-font-size:16px; 
-color:#000000; 
-font-family:'Courier New',Arial; 
-font-weight: lighter;
- text-shadow: 2px 2px 5px #ec2ec4;
- text-align: left;
-}
-
-h6 {
-font-size:12px; 
-color:#000000; 
-font-family:'Courier New',Arial; 
-font-weight: lighter;
- text-shadow: 2px 2px 5px #ec2ec4;
- text-align: left;
- line-height: 1.5;
-}
-
-
 .iframe-container{
   position: relative;
   width: 100%;
@@ -461,6 +305,23 @@ font-weight: lighter;
   height: 100%;
 }
 
+.iframe-container2{
+  position: relative;
+  width: 100%;
+  padding-bottom: 50%; 
+  height: 0;
+}
+.iframe-container2 iframe{
+  position: absolute;
+  top:0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.contact {
+margin-top: 0em !important;
+}
 
 div.pressphotos {
 margin-top:15em;
@@ -495,9 +356,133 @@ width:500px;
 height:267px;
 }
 
+.live{
+margin-top:30em;
+}
 .thanksyou {
 margin-top:28em;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  a.eight {
+  color: #00ff00;
+  text-decoration:none;
+  font-family: 'Courier New',Arial;
+  font-size: 12px;
+  font-weight: lighter;
+  text-shadow: 2px 2px 5px #000000;
+}
+
+a.eight:hover {
+  color: #b5ffb5;
+  text-decoration:none;
+  font-family: 'Courier New',Arial;
+  font-size: 12px;
+  font-weight: lighter;
+  text-shadow: 2px 2px 5px #000000;
+}
+
+a.six {
+  color: #b5ffb5;
+  text-decoration:none;
+  font-family: 'Courier New',Arial;
+  font-size: 12px;
+  font-weight: lighter;
+  text-shadow: 2px 2px 5px #ec2ec4;
+}
+
+a.six:hover {
+  color: #e9ffe9;
+  text-decoration:none;
+  font-family: 'Courier New',Arial;
+  font-size: 12px;
+  font-weight: lighter;
+  text-shadow: 2px 2px 5px #ec2ec4;
+}
+
+a.seven {
+  color: #b5ffb5;
+  text-decoration:none;
+  font-family: 'Courier New',Arial;
+  font-size: 12px;
+  font-weight: lighter;
+  text-shadow: 2px 2px 5px #ec2ec4;
+}
+
+a.seven:hover {
+  color: #e9ffe9;
+  text-decoration:none;
+  font-family: 'Courier New',Arial;
+  font-size: 12px;
+  font-weight: lighter;
+  text-shadow: 2px 2px 5px #ec2ec4;
+}
+
+
+a.four {
+  color: #b5ffb5;
+  text-decoration:none;
+  font-family: 'Courier New',Arial;
+  font-size: 14px;
+  font-weight: lighter;
+   text-shadow: 2px 2px 5px #ec2ec4;
+}
+
+a.four:hover {
+  color: #e9ffe9;
+  text-decoration:none;
+  font-family: 'Courier New',Arial;
+  font-size: 14px;
+  font-weight: lighter;
+   text-shadow: 2px 2px 5px #ec2ec4;
+}
+
+a.one {
+color:#00FF00;
+text-decoration:none;
+font-family: 'Courier New',Arial;
+font-size: 16px;
+font-weight: lighter;
+}
+
+a.one:hover {
+  color: #8e9cff;
+  text-decoration:none;
+  font-family: 'Courier New',Arial;
+  font-size: 16px;
+  font-weight: lighter;
+   text-shadow: 2px 2px 5px red;
+}
+
+a.five {
+  color: #b5ffb5;
+  text-decoration:none;
+  font-family: 'Courier New',Arial;
+  font-size: 12px;
+  font-weight: lighter;
+}
+
+a.five:hover {
+  color: #ebe9ff;
+  text-decoration:none;
+  font-family: 'Courier New',Arial;
+  font-size: 12px;
+  font-weight: lighter;
+}
+
+
 
 </style>
 </head>
