--- a/experiment desktop.css
+++ b/experiment desktop.css
@@ -78,7 +78,7 @@ visibility: hidden;
 }
 
 .hero-image {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 1)), url("profil.jpg");
+  background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 1)), url("whiteangel.jpg");
   height: 100%;
    background-attachment: fixed;
   background-position: center;
@@ -282,7 +282,7 @@ body, html {
 }
 
 .parallax {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 1)), url("profil.jpg");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 1)), url("lila.jpg");
 margin-top:0em;
 margin-bottom: 0em !important;
   height: 140em; 
