--- a/experiment desktop.css
+++ b/experiment desktop.css
@@ -281,11 +281,43 @@ body, html {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-.parallax {
+.parallax-contact {
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 1)), url("lila.jpg");
 margin-top:0em;
 margin-bottom: 0em !important;
-  height: 140em; 
+  height: 50em; 
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.parallax-press {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 1)), url("blueangel.jpg");
+margin-top:0em;
+margin-bottom: 0em !important;
+  height: 40em; 
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.parallax-live {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 1)), url("angelneon.jpg");
+margin-top:0em;
+margin-bottom: 0em !important;
+  height: 30em; 
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.parallax-mailinglist {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 1)), url("angelgreen.jpg");
+margin-bottom: 0em !important;
+  height: 50em; 
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
@@ -297,6 +329,7 @@ margin-bottom: 0em !important;
   padding-bottom: 50%; 
   height: 0;
 }
+
 .iframe-container iframe{
   position: absolute;
   top:0;
@@ -324,7 +357,6 @@ margin-top: 0em !important;
 }
 
 div.pressphotos {
-margin-top:15em;
 margin-left:30px;
 margin-bottom:1em;
 }
@@ -357,10 +389,9 @@ height:267px;
 }
 
 .live{
-margin-top:30em;
 }
 .thanksyou {
-margin-top:28em;
+margin-top:0em;
 }
 
 
