--- a/experiment desktop.css
+++ b/experiment desktop.css
@@ -13,6 +13,7 @@ body, html {
 
 html {
   scroll-behavior: smooth;
+  scroll-margin: 50px;
 }
 
 a,a:link,a:visited{outline:none;}
@@ -90,8 +91,8 @@ visibility: hidden;
 
 .centered {
   position: fixed;
-  top: -2.5%;
-  left: 2%;
+  top: 4px;
+  left: 30px;
   z-index: 99;
 }
 
@@ -293,7 +294,7 @@ margin-bottom: 0em !important;
 }
 
 .parallax-press {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 1)), url("blueangel.jpg");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 1)), url("angelgreen.jpg");
 margin-top:0em;
 margin-bottom: 0em !important;
   height: 40em; 
@@ -307,22 +308,13 @@ margin-bottom: 0em !important;
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 1)), url("angelneon.jpg");
 margin-top:0em;
 margin-bottom: 0em !important;
-  height: 30em; 
+  height: 45em; 
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
 }
 
-.parallax-mailinglist {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 1)), url("angelgreen.jpg");
-margin-bottom: 0em !important;
-  height: 50em; 
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
 .iframe-container{
   position: relative;
   width: 100%;
@@ -366,7 +358,7 @@ font-size:16px;
 color:#00FF00; 
 font-family:'Courier New',Arial; 
 font-weight: lighter;
- margin-right: 300px;
+ margin-right: 251px;
  display:inline;
 }
 
@@ -513,6 +505,21 @@ a.five:hover {
   font-weight: lighter;
 }
 
+a.ten {
+color:#00FF00;
+font-family:'Courier New',Arial;
+font-weight: lighter;
+ text-decoration:none;
+font-size: 16px;
+}
+
+a.ten:hover {
+color:#ebe9ff;
+font-family:'Courier New',Arial;
+font-weight: lighter;
+ text-decoration:none;
+font-size: 16px;
+}
 
 
 </style>
